@startuml
class estacionamiento.component.Recurso {
~ Semaphore semaphore
~ Label contEspera
- Rectangle rectangle_1
- Rectangle rectangle_2
- Rectangle rectangle_3
- Rectangle rectangle_4
- Rectangle rectangle_5
- Rectangle rectangle_6
- Rectangle rectangle_7
- Rectangle rectangle_8
- Rectangle rectangle_9
- Rectangle rectangle_10
- Rectangle rectangle_11
- Rectangle rectangle_12
- Rectangle rectangle_13
- Rectangle rectangle_14
- Rectangle rectangle_15
- Rectangle rectangle_16
- Rectangle rectangle_17
- Rectangle rectangle_18
- Rectangle rectangle_19
- Rectangle rectangle_20
- Rectangle index
~ int contador
+ void cajon(Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Label,Semaphore,int,Estacionamiento)
}
class estacionamiento.Run {
~ Lugares l
~ Recurso r
~ Rectangle r1
~ Semaphore semA
+ void run()
}
class estacionamiento.controller.MainController {
- Rectangle r1
- Rectangle r2
- Rectangle r3
- Rectangle r4
- Rectangle r5
- Rectangle r6
- Rectangle r7
- Rectangle r8
- Rectangle r9
- Rectangle r10
- Rectangle r11
- Rectangle r12
- Rectangle r13
- Rectangle r14
- Rectangle r15
- Rectangle r16
- Rectangle r17
- Rectangle r18
- Rectangle r19
- Rectangle r20
- Rectangle index
+ void initialize(URL,ResourceBundle)
}
class estacionamiento.component.Run {
~ Estacionamiento estacionamiento
~ Recurso r
~ Rectangle r1
~ Semaphore semA
+ void run()
}
class estacionamiento.model.Tiempo {
- Rectangle rectangle_1
- Rectangle rectangle_2
- Rectangle rectangle_3
- Rectangle rectangle_4
- Rectangle rectangle_5
- Rectangle rectangle_6
- Rectangle rectangle_7
- Rectangle rectangle_8
- Rectangle rectangle_9
- Rectangle rectangle_10
- Rectangle rectangle_11
- Rectangle rectangle_12
- Rectangle rectangle_13
- Rectangle rectangle_14
- Rectangle rectangle_15
- Rectangle rectangle_16
- Rectangle rectangle_17
- Rectangle rectangle_18
- Rectangle rectangle_19
- Rectangle rectangle_20
- Rectangle index
- Semaphore semaphore
- Estacionamiento estacionamiento
- int position
+ void run()
}
class estacionamiento.model.Auto {
~ Estacionamiento estacionamiento
- Rectangle rectangle_1
- Rectangle rectangle_2
- Rectangle rectangle_3
- Rectangle rectangle_4
- Rectangle rectangle_5
- Rectangle rectangle_6
- Rectangle rectangle_7
- Rectangle rectangle_8
- Rectangle rectangle_9
- Rectangle rectangle_10
- Rectangle rectangle_11
- Rectangle rectangle_12
- Rectangle rectangle_13
- Rectangle rectangle_14
- Rectangle rectangle_15
- Rectangle rectangle_16
- Rectangle rectangle_17
- Rectangle rectangle_18
- Rectangle rectangle_19
- Rectangle rectangle_20
- Rectangle index
- Recurso recurso
- Semaphore semaphore
- Tiempo timer
- int temp
+ void run()
}
class estacionamiento.MainController {
- Rectangle r1
- Rectangle r2
- Rectangle r3
- Rectangle r4
- Rectangle r5
- Rectangle r6
- Rectangle r7
- Rectangle r8
- Rectangle r9
- Rectangle r10
- Rectangle r11
- Rectangle r12
- Rectangle r13
- Rectangle r14
- Rectangle r15
- Rectangle r16
- Rectangle r17
- Rectangle r18
- Rectangle r19
- Rectangle r20
- Rectangle index
+ void initialize(URL,ResourceBundle)
}
class estacionamiento.model.Estacionamiento {
+ int[] lugares
+ int contVehiculos
+ int lugarEntrada
~ int contEsperaAux
~ Color ocupado
~ Color vacio
~ boolean vaciar
~ int n
~ int position
- Rectangle r1
+ void push(Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle)
+ void pull(Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,int)
+ int getPosition()
+ void print()
+ int buscarLugar()
+ void pintar(int,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Color)
}
class estacionamiento.main {
+ {static} void main(String[])
+ void start(Stage)
}
class estacionamiento.Recurso {
~ Semaphore semA
~ Label contEspera
~ Rectangle r1
~ Lugares l
~ int contador
+ void cajon(Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Label,Semaphore,int,Lugares)
}
class estacionamiento.Lugares {
+ int[] lugares
+ int contVehiculos
+ int lugarEntrada
~ int contEsperaAux
~ Color ocupado
~ Color vacio
~ boolean vaciar
~ int n
~ int pos
- Rectangle r1
+ void push(Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle)
+ void pull(Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,int)
+ int getPos()
+ void print()
+ int buscarLugar()
+ void pintar(int,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Rectangle,Color)
}
class estacionamiento.Estacionamiento {
+ {static} void main(String[])
+ void start(Stage)
}
class estacionamiento.TimerT {
~ Rectangle r1
~ Semaphore semA
~ Lugares l
~ int p
+ void run()
}
class estacionamiento.Auto {
~ Lugares l
~ Rectangle r1
~ Recurso r
~ Semaphore semA
~ TimerT t
~ int temp
+ void run()
}


estacionamiento.Thread <|-- estacionamiento.Run
javafx.fxml.Initializable <|.. estacionamiento.controller.MainController
estacionamiento.component.Thread <|-- estacionamiento.component.Run
estacionamiento.model.Thread <|-- estacionamiento.model.Tiempo
estacionamiento.model.Thread <|-- estacionamiento.model.Auto
javafx.fxml.Initializable <|.. estacionamiento.MainController
javafx.application.Application <|-- estacionamiento.main
javafx.application.Application <|-- estacionamiento.Estacionamiento
estacionamiento.Thread <|-- estacionamiento.TimerT
estacionamiento.Thread <|-- estacionamiento.Auto
@enduml